# preflight

./: .gitignore  Makefile  README.md  environment.yml  preflight_report.html  pyproject.toml
.github/workflows/: ci.yml
docs/: ADDING_A_CHECK.md  SCHEMA_COMPATIBILITY.md  TROUBLESHOOTING.md
docs/checks/: class-balance.md  completeness.md  data-types.md  distributional-health.md  duplicates.md  feature-correlation.md  leakage-detection.md  train-test-drift.md
examples/: public_datasets_demo.py
notebooks/: preflight_public_datasets_demo.ipynb  simple_example.ipynb
notebooks/data/: sample_breast_cancer.csv  simple_example_dataset.csv
preflight/: __init__.py  _types.py  api.py  cli.py  compare.py  config.py  config_loader.py  constants.py  report.py  schema.py  scorer.py
preflight/checks/: __init__.py  balance.py  completeness.py  correlations.py  distributions.py  duplicates.py  leakage.py  types.py
preflight/checks_native/: __init__.py  balance_native.py  completeness_native.py  correlations_native.py  distributions_native.py  duplicates_native.py  fingerprint.py  leakage_native.py  split_integrity.py  types_native.py
preflight/engine/: __init__.py  adapters.py  interfaces.py  registry.py  runner.py
preflight/legacy/: __init__.py  api.py
preflight/model/: __init__.py  finding.py  policy.py  report.py
preflight/policy/: __init__.py  default_profiles.py  evaluator.py  loader.py  suppressions.py
preflight/renderers/: __init__.py  html.py  json.py  markdown.py  text.py
tests/: conftest.py  run_tests.py  test_checks.py  test_cli_main.py  test_cli_suppressions.py  test_compare.py  test_config_loader.py  test_engine_adapters.py  test_native_checks.py  test_policy_api.py  test_policy_loader.py  test_policy_profiles.py  test_policy_split_native.py  test_policy_suppressions.py  test_registry_plugins.py  test_renderers.py  test_renderers_html.py  test_schema_contract.py
